added routing to two new partials

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Modern Framework Exercise, Route-Routing</title>
 </head>
-<body>
+<body ng-app="routeRouting">
 	<h1>Modern Framework Exercise</h1>
-	<h2>Route-Routing</h2>
+	<h2>'Route-Routing'</h2>
 
+	<div ng-view></div>
 
 
 	<script src="./bower_components/angular/angular.js"></script>
